# malak-platform

./: .gitignore  CRITIQUE_RESPONSE_PLAN.md  CURRENT_EXPERIMENT_STATUS.md  EXPERIMENTS_RUNNING.md  FINAL_EXPERIMENTAL_SUMMARY.md  FINAL_PAPER_PACKAGE.md  FIXED_VERSION_GUIDE.txt  FULL_EXPERIMENT_PLAN.md  GITHUB_PUSH_INSTRUCTIONS.md  GITHUB_REPOSITORY_SETUP.md  INTEGRATION_COMPLETE.md  LICENSE  OPTION1_SUMMARY.txt  OVERLEAF_PACKAGE_INFO.md  PAPER_UPDATED_SUMMARY.txt  PLACEHOLDER_DATA_WARNING.txt  README.md  RENODE_IMPLEMENTATION_COMPLETE.md  RENODE_SIMULATION_STATUS.md  RENODE_VALIDATION_PLAN.md  REPOSITORY_READY_SUMMARY.md  RUN_EXPERIMENT.md  SIMULATION_FINAL_STATUS.md  architecture_comparison.py  auto_integrate_results.py  experiment_log.txt  fashion_mnist_experiment.py  generate_paper_tables.py  monitor_experiments.sh  pruning_experiment.py  pyproject.toml  run_all_experiments.py  simple_experiment.py
experiment_results/: EXPANDED_EXPERIMENTS_SUMMARY.md  EXPERIMENTS_STATUS.md  SESSION_SUMMARY.md  architecture_log.txt  paper_summary.txt  pruning_log.txt  results.json
experiments/: architecture_comparison.py  distillation_experiment.py  export_experiment.py  fashion_mnist_experiment.py  pruning_experiment.py  simple_experiment.py  update_paper_tables.py
github_repo/: .gitignore  LICENSE  README.md  requirements.txt
malak/: __init__.py  cli.py  model_card.py
paper/: COMPILATION_GUIDE.md  EXPERIMENTAL_DATA_TODO.md  OVERLEAF_README.md  OVERLEAF_UPLOAD.txt  QUICK_START_OVERLEAF.md  README.md  SIMPLE_EXPERIMENT_GUIDE.md  TIKZ_OVERLEAF_GUIDE.md  TIKZ_SUMMARY.txt  main.tex  (+23 more)
(+78 files in other folders)
